# AppsTracker

./: .env.example  AppsTracker_summary.md  README.md  TODO.md  data.db  pyproject.toml  settings.json
data/: data.db
frontend/: README.md  env.d.ts  main.py  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/components/: AddAppButton.vue  AppIconButton.vue  AppStat.vue  BaseButton.vue  BaseOption.vue  CardApp.vue  NavigationBar.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/views/: AppsView.vue  HomeView.vue  PatternsView.vue  SettingsView.vue
src/: api.py  config.py  database.py  desktop.py  main.py  models.py  process_manager.py  settings_manager.py  tracker.py  tracker_manager.py
src/applications/: models.py  repository.py  services.py
src/core/: database.py  repository.py
src/notifications/: manager.py  notification_manager.py
src/patterns/: models.py  repository.py
src/scheduler/: manager.py
src/session_rules/: service.py  session_state.py
src/tracking/: manager.py  tracker.py
src/utils/: iconextract.py
