[project]
name = "appstracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icoextract>=0.2.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "pywebview>=6.1",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.48",
    "wintoastcreator>=0.4.0",
]
